--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/crypto-js": "^3.1.35",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
+    "ng2-cookies": "^1.0.12",
     "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
