--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.4.3",
+    "@angular/cdk": "^2.0.0-beta.11",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.11",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/crypto-js": "^3.1.35",
-    "angular-font-awesome": "^2.0.3",
-    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
-    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "ng2-cookies": "^1.0.12",
-    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
