--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@types/crypto-js": "^3.1.35",
+    "@types/lodash": "^4.14.76",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
     "ng2-cookies": "^1.0.12",
     "rxjs": "^5.4.2",
     "web-animations-js": "^2.3.1",
